Bug 1084985 - Remove more 'using namespace JS;' to avoid sporadic bustage in unified builds (r=lth)